--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* FILENAME: styles.css */
 /* YouTube Recommendation Cleaner Styles */
 
 /* Add subtle hover effect to video thumbnails to indicate they're interactive */
